--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -48,6 +48,10 @@ body {font-size:16px;}
   margin-top: 20px
 }
 
+.form-page .form-group-select {
+  margin-top: 20px
+}
+
 .form-page .w3-container {
   margin-top: 15px
 }
@@ -69,10 +73,26 @@ body {font-size:16px;}
 .w3-round {
   margin-top: -5px;
   width: 50px;
-  border: 5px solid #C33C54;
+  border: 4px solid #C33C54;
 }
 
 #btn-anel {
   background-color: #C33C54;
   color: white
+}
+
+.custom-select {
+  margin-top: 15px;
+}
+
+.multi-select {
+  margin-top: 15px;
+}
+
+.form-parada {
+  margin-top: 15px;
+}
+
+.form-parada .form-group-select {
+  margin-top: -15px;
 }
