--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -27,6 +27,13 @@ body {font-size:16px;}
   margin-top: -50px
 }
 
+.w3-containerBtt {
+  position: relative;
+  padding: 15px;
+  bottom: 92px;
+  left: 130px;
+
+}
 
 .w3-btn {
   margin-top: 20px
